Fixed the sidebar width on mobile devices

--- a/platform/themes/milani/assets/sass/_custom.scss
+++ b/platform/themes/milani/assets/sass/_custom.scss
@@ -1842,6 +1842,11 @@ body {
     overflow-x: auto;
 }
 
+@media (max-width: 991px) {
+    .theiaStickySidebar {
+        width: 100% !important;
+    }
+}
 // /** - DEBUG - **/
 // #preloader-active {
 //     display: none;
