--- a/platform/themes/milani/public/css/style.css
+++ b/platform/themes/milani/public/css/style.css
@@ -9697,6 +9697,11 @@ body {
   overflow-x: auto;
 }
 
+@media (max-width: 991px) {
+  .theiaStickySidebar {
+    width: 100% !important;
+  }
+}
 body {
   overflow-x: hidden !important;
 }
